<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Attention Test</string>
    <string name="main_title">Main menu</string>
    <string name="main_digital_sequence">Choose the test</string>
    <string name="main_records">Scores</string>
    <string name="main_more_apps"><u>Get more applications</u></string>
    <string name="main_rate_app">Rate application</string>

    <string name="dig_seq_level">Select level</string>
    <string name="dig_seq_hide_completed">Hide completed squares</string>
    <string name="dig_seq_var_font_size">Various font size</string>
    <string name="dig_seq_var_font_color">Various font color</string>
    <string name="dig_seq_reverse_order">Reverse order</string>
    <string name="dig_seq_size_3">easy (3x3)</string>
    <string name="dig_seq_size_4">medium (4x4)</string>
    <string name="dig_seq_size_5">hard (5x5)</string>
    <string name="dig_seq_size_6">extra hard (6x6)</string>
    <string name="dig_square_title">Touch the next number</string>
    <string name="dig_square_title_reverse">Touch the previous number (reverse order)</string>
    <string name="dig_square_new_record">Congratulations! You have set a new record</string>
    <string name="dig_square_without_record">Very goods. You have done for</string>
    <string name="dig_square_seconds">seconds</string>
    <string name="dig_square_start_again">Start again</string>
    <string name="dig_square_finish">Finish</string>

    <string name="records_clear">Reset</string>
    <string name="records_sec">sec</string>
    <string name="records_var_font_size">various font size</string>
    <string name="records_fixed_font_size">fixed font size</string>
    <string name="records_var_font_color">various font color</string>
    <string name="records_fixed_font_color">fixed font color</string>
    <string name="records_reverse_order">reverse order</string>
    <string name="records_direct_order">direct order</string>
</resources>